<resources>
    <string name="app_name">经纬购</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">头部</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="website">http://www.shareSDK.cn</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="qzone">QQ空间</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="renren">人人网</string>
    <string name="kaixin">开心网</string>
    <string name="email">邮件</string>
    <string name="shortmessage">信息</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="sohusuishenkan">搜狐随身看</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="douban">豆瓣</string>
    <string name="youdao">有道云笔记</string>
    <string name="evernote">印象笔记</string>
    <string name="linkedin">Linked In</string>
    <string name="googleplus">Google+</string>
    <string name="foursquare">FourSquare</string>
    <string name="qq">QQ</string>
    <string name="pinterest">Pinterest</string>
    <string name="flickr">Flickr</string>
    <string name="tumblr">Tumblr</string>
    <string name="dropbox">Dropbox</string>
    <string name="vkontakte">VK</string>
    <string name="instagram">Instagram</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="list_friends">%s的朋友</string>
    <string name="share_failed">分享失败</string>
    <string name="msp_str_null" />
    <string name="msp_app_name">支付宝快捷支付服务</string>
    <string name="msp_error_title_default">提示</string>
    <string name="msp_action_settings">设置</string>
    <string name="msp_xlistview_header_hint_normal">下拉刷新</string>
    <string name="msp_xlistview_header_last_time">上次更新时间：</string>
    <string name="msp_xlistview_footer_hint_normal">查看更多</string>
    <string name="msp_close">关闭</string>
    <string name="msp_memo_user_cancel">操作已经取消。</string>
    <string name="msp_memo_app_cancel">程序或者数据出现问题。</string>
    <string name="msp_memo_server_cancel">系统繁忙，请稍后再试。</string>
    <string name="msp_memo_repeat_pay">同一订单禁止同时多次支付。</string>
    <string name="msp_mini_safty_code_info">安全码是打印在信用卡背面签名区的一组数字，一般是后3位或后4位数字</string>
    <string name="msp_mini_safty_code_title">安全码说明</string>
    <string name="msp_mini_read_protocal_title">选择阅读协议</string>
    <string name="msp_mini_choose_identitify">选择证件类别</string>
    <string name="msp_mini_card_type_text">卡类型</string>
    <string name="confirm_title">提示</string>
    <string name="cardUnbing">解除绑定</string>
    <string name="cardDefaultuse">默认使用该卡支付</string>
    <string name="cardCancle">取消</string>
    <string name="channel">CommonChannelInfo</string>
    <string name="mini_loading_1">正在安全检测…</string>
    <string name="mini_loading">正在加载…</string>
    <string name="mini_net_error">不能连接到网络，是否重试？</string>
    <string name="mini_redo">重试</string>
    <string name="mini_error_title_default">提示</string>
    <string name="mini_app_error">系统繁忙，请稍后再试。</string>
    <string name="mini_debug_app_error">程序发生错误！点击确定退出程序。</string>
    <string name="mini_countdown_info">获取校验码</string>
    <string name="mini_format_error">格式错误</string>
    <string name="mini_page_add_title">添加银行卡</string>
    <string name="mini_page_add_hint">银行卡号</string>
    <string name="mini_card_no">卡号</string>
    <string name="mini_page_add_tips">支付宝提供支付密码和短信验证的双重保障</string>
    <string name="mini_page_msg_title">填写银行卡信息</string>
    <string name="mini_page_next">下一步</string>
    <string name="mini_page_name">姓名</string>
    <string name="mini_page_input_name_hint">持卡人姓名</string>
    <string name="mini_id_no">证件号</string>
    <string name="mini_page_input_id_hint">证件号码</string>
    <string name="mini_page_msg_check">信息加密处理，仅用于银行验证</string>
    <string name="mini_page_msg_choose_type">选择证件类型</string>
    <string name="mini_date">有效期</string>
    <string name="mini_date_hint">月份/年份</string>
    <string name="mini_safe_no">安全码</string>
    <string name="mini_safe_no_hint">卡背面末三位数字</string>
    <string name="mini_phone_no">手机号</string>
    <string name="mini_phone_no_hint">银行预留手机号码</string>
    <string name="mini_agree">同意</string>
    <string name="mini_quickpay_protocol">《服务协议》</string>
    <string name="mini_password">密码</string>
    <string name="mini_switch">切换</string>
    <string name="mini_car_default_use">默认使用该卡支付</string>
    <string name="mini_car_limit_phone">调整交易限额，请联系银行客服：</string>
    <string name="mini_password_hint">请输入密码</string>
    <string name="mini_canel_install_msp">你已取消安装移动快捷支付。</string>
    <string name="mini_canel_install_wallet">你已取消安装支付宝钱包。</string>
    <string name="mini_setting_default_tips">默认使用该卡支付</string>
    <string name="mini_setting_view_all_bankcard">查看全部(%1$d张)</string>
    <string name="mini_setting_debit_cards_tips">储蓄卡</string>
    <string name="mini_setting_credit_cards_tips">信用卡</string>
    <string name="mini_setting_pay_password">支付密码</string>
    <string name="mini_weakpassword_error_same">请不要使用相同的数字</string>
    <string name="mini_weakpassword_error_serial">请不要使用连续的数字</string>
    <string name="mini_str_null" />
    <string name="pull_to_refresh_pull_label">下拉可以刷新…</string>
    <string name="pull_to_refresh_release_label">松开可以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="app_name_desktop">经纬购</string>
    <string name="app_type_android">2</string>
    <string name="loading">加载中…</string>
    <string name="pull_to_refresh_tap_label">点击可以刷新…</string>
    <string name="tab_to_refresh">点击可以刷新</string>
    <string name="login_account_edit_hits">用户名/邮箱/手机号码</string>
    <string name="login_password_edit_hits">密码</string>
    <string name="login_account_label">账号</string>
    <string name="login_password_label">密码</string>
    <string name="login_label">登录</string>
    <string name="logout_label">注销</string>
    <string name="logout_success">注销成功</string>
    <string name="logout_sure">确定注销？</string>
    <string name="account_label">用户名</string>
    <string name="contentDescription" />
    <string name="register_label">注册洋码头账户</string>
    <string name="account_left_money">账户余额：</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_retry">重试</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="exist_label">退出</string>
    <string name="tab_home">首页</string>
    <string name="tab_userinfo">个人中心</string>
    <string name="tab_message">消息</string>
    <string name="tab_order_manage">订单管理</string>
    <string name="message_label">消息管理</string>
    <string name="tab_new_product">发布商品</string>
    <string name="tab_new_situation">发布动态</string>
    <string name="tab_new_live_show">创建直播</string>
    <string name="title_order">订单列表</string>
    <string name="title_order_detail">订单详情</string>
    <string name="title_message">消息中心</string>
    <string name="title_event_list">商品列表</string>
    <string name="title_seller_product_list">已发布的商品</string>
    <string name="title_event_detail">单品页</string>
    <string name="btn_login">登录</string>
    <string name="upload_ing_text">上传中，请稍后...</string>
    <string name="login_ing_text">登录中，请稍后...</string>
    <string name="logout_ing_text">注销中，请稍后...</string>
    <string name="home_more_label">更多</string>
    <string name="my_order_label">我的订单</string>
    <string name="published_product_label">已发布的商品</string>
    <string name="live_manager_label">管理直播及发布商品</string>
    <string name="news_manager_label">管理动态</string>
    <string name="auto_forward_label">微博&amp;微信自动转发</string>
    <string name="version_tip_label">当前版本%s</string>
    <string name="Q_and_A_label">Q&amp;A</string>
    <string name="message_center_label">消息中心</string>
    <string name="event_new_product">新上架了%1$d个商品</string>
    <string name="hint_enter_code">请输入邀请码</string>
    <string name="follow_yangmatou">微信关注洋码头公众号(微信号：&lt;font color=red >yangmatou&lt;/font>)，发送邀请自动获取(仅限今天)，数量有限，赶快来抢</string>
    <string name="label_submit">提交</string>
    <string name="label_new_product">发布</string>
    <string name="label_price">预计到手价(元)</string>
    <string name="label_description">商品介绍</string>
    <string name="label_stock">库存(件)</string>
    <string name="label_product_lefttime">商品有效时间</string>
    <string name="label_product_tax">包税</string>
    <string name="label_product_shipping">包邮</string>
    <string name="label_product_full_pay">全额付款</string>
    <string name="label_stock_left">剩余库存</string>
    <string name="label_onshelf_time">上架时间</string>
    <string name="label_publish_time">发布时间</string>
    <string name="product_onshelf">暂时不上架</string>
    <string name="product_rish_tip">提示买家砍单风险</string>
    <string name="label_next_step">下一步</string>
    <string name="system_error">系统错误，请稍后重试</string>
    <string name="product_complete">商品发布成功！您还可以：</string>
    <string name="product_complete2">进入已发布的商品</string>
    <string name="product_complete3">继续发布商品</string>
    <string name="des_not_null">描述不能为空</string>
    <string name="price_not_zero">价格不能为零</string>
    <string name="stock_not_zero">库存不能为零</string>
    <string name="product_picture_not_null">请选择图片</string>
    <string name="product_save_order">结算</string>
    <string name="product_pay_order">收银台</string>
    <string name="receive_address">收货地址</string>
    <string name="red_money_textview">红包(最多使用%s元)</string>
    <string name="red_money_textview2">%s元</string>
    <string name="red_money_textview3">(最多使用%s元)</string>
    <string name="user_leftcash_textview">(余额%s元)</string>
    <string name="location_textview">您当前所在的位置是:%s</string>
    <string name="location_success">定位成功！</string>
    <string name="location_ing">定位查询中...</string>
    <string name="pay_password_text">输入支付密码</string>
    <string name="change_stock_num">修改库存</string>
    <string name="no_pay_password_text">你还未设置支付密码，请去洋码头网站(www.ymatou.com)设置</string>
    <string name="check_network">检查网络</string>
    <string name="comment_success">评论成功</string>
    <string name="comment_failed">评论失败</string>
    <string name="tip_reset_password">忘记密码?</string>
    <string name="data_picker_tip">选择年,月,日</string>
    <string name="time_picker_tip">选择时间</string>
    <string name="picked_time_tip">已选日期:</string>
</resources>