<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_size_large" android:textColor="#ff777777" android:gravity="center" android:id="@+id/tvDatePicker" android:background="@drawable/box_item_bg" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/data_picker_tip" />
    <TextView android:textSize="@dimen/text_size_large" android:textColor="#ff777777" android:gravity="center" android:id="@+id/tvTimePicker" android:background="@drawable/box_item_bg" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/time_picker_tip" />
    <View android:background="@color/divider_line" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_margin="10.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <TextView android:textSize="@dimen/text_size_medium" android:textColor="#ff777777" android:id="@+id/tvPickDateAndTimeTip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/picked_time_tip" />
        <TextView android:textSize="@dimen/text_size_medium" android:textColor="@color/theme_main_color" android:id="@+id/tvPickDateAndTime" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView android:textSize="@dimen/text_size_large" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/tvOkay" android:background="@drawable/round_button_bg" android:paddingLeft="100.0dip" android:paddingTop="5.0dip" android:paddingRight="100.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/alert_dialog_ok" />
</LinearLayout>