<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="bottom" android:layout_gravity="bottom" android:orientation="vertical" android:background="@color/mini_card_edit_pop_shadow" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="bottom" android:layout_gravity="bottom" android:orientation="vertical" android:id="@+id/mini_card_edit_pop" android:background="@color/mini_card_edti_bk" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="@dimen/mini_margin_19" android:textColor="@color/mini_text_white" android:gravity="center" android:layout_gravity="center" android:id="@+id/mini_card_unbing" android:background="@drawable/mini_btn_card_unbind_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/mini_margin_10" android:layout_marginTop="@dimen/mini_margin_27" android:layout_marginRight="@dimen/mini_margin_10" android:text="@string/cardUnbing" />
        <Button android:textSize="@dimen/mini_margin_19" android:textColor="@color/mini_text_color_gray" android:gravity="center" android:layout_gravity="center" android:id="@+id/mini_card_setdefault" android:background="@drawable/mini_btn_card_setdefault_selector" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/mini_margin_10" android:layout_marginTop="@dimen/mini_margin_13" android:layout_marginRight="@dimen/mini_margin_10" android:text="@string/cardDefaultuse" />
        <Button android:textSize="@dimen/mini_margin_19" android:textColor="@color/mini_input_hint_color" android:gravity="center" android:layout_gravity="center" android:id="@+id/mini_card_cancel" android:background="@drawable/mini_btn_card_cancle_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/mini_margin_10" android:layout_marginTop="@dimen/mini_margin_27" android:layout_marginRight="@dimen/mini_margin_10" android:layout_marginBottom="@dimen/mini_margin_13" android:text="@string/cardCancle" />
    </LinearLayout>
</LinearLayout>