<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.jwgou.android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/include_header" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30.0dip" >

            <RelativeLayout
                android:id="@+id/layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10.0dip" >

                <com.jwgou.android.widgets.CircleImageView
                    android:id="@+id/user_head_imageview"
                    android:layout_width="60.0dip"
                    android:layout_height="60.0dip"
                    android:layout_marginLeft="15.0px"
                    android:contentDescription="@string/contentDescription"
                    android:scaleType="fitXY"
                    app:cornerRadius="5.0px" />

                <TextView
                    android:id="@+id/user_name_textview"
                    android:layout_width="150.0dip"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/user_head_imageview"
                    android:layout_marginLeft="10.0dip"
                    android:layout_toRightOf="@id/user_head_imageview"
                    android:text="@string/account_label"
                    android:textColor="#ff333333"
                    android:textSize="22.0sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_head_imageview"
                    android:layout_marginTop="10.0dip"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvNewProduct"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:background="@drawable/round_button_bg"
                        android:gravity="center"
                        android:paddingBottom="5.0dip"
                        android:paddingTop="5.0dip"
                        android:text="@string/tab_new_product"
                        android:textColor="@android:color/white"
                        android:textSize="16.0sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvCreateNews"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5.0dip"
                        android:layout_weight="1.0"
                        android:background="@drawable/round_button_bg"
                        android:gravity="center"
                        android:paddingBottom="5.0dip"
                        android:paddingTop="5.0dip"
                        android:text="@string/tab_new_situation"
                        android:textColor="@android:color/white"
                        android:textSize="16.0sp" />

                    <TextView
                        android:id="@+id/tvCreateLive"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5.0dip"
                        android:layout_weight="1.0"
                        android:background="@drawable/round_button_bg"
                        android:gravity="center"
                        android:paddingBottom="5.0dip"
                        android:paddingTop="5.0dip"
                        android:text="@string/tab_new_live_show"
                        android:textColor="@android:color/white"
                        android:textSize="16.0sp" />

                    <View
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5" />
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/order_manage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ffefefef"
                android:gravity="center_vertical"
                android:padding="10.0dip"
                android:text="@string/tab_order_manage"
                android:textColor="#ff666666"
                android:textSize="16.0sp" />

            <include
                android:id="@+id/incLiveManager"
                layout="@layout/userinfo_item" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:src="@color/divider_line" />

            <include
                android:id="@+id/incNewsManager"
                layout="@layout/userinfo_item" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:src="@color/divider_line" />

            <include
                android:id="@+id/oder_manage"
                layout="@layout/userinfo_item" />

            <TextView
                android:id="@+id/message_manager"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ffefefef"
                android:padding="10.0dip"
                android:text="@string/message_label"
                android:textColor="#ff666666"
                android:textSize="16.0sp" />

            <include
                android:id="@+id/message_center"
                layout="@layout/userinfo_item" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:src="@color/divider_line"
                android:visibility="gone" />

            <include
                android:id="@+id/incAutoForward"
                layout="@layout/userinfo_item" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:src="@color/divider_line" />

            <RelativeLayout
                android:id="@+id/rlNewVersion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="15.0dip" >

                <TextView
                    android:id="@+id/tvNewVersionTip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="当前版本"
                    android:textColor="#ff666666"
                    android:textSize="18.0sp" />

                <TextView
                    android:id="@+id/tvUpdateNewVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/round_button_bg"
                    android:gravity="center"
                    android:padding="5.0dip"
                    android:text="点击更新"
                    android:textColor="@android:color/white"
                    android:textSize="16.0sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:src="@color/divider_line" />

            <include
                android:id="@+id/incQandA"
                layout="@layout/userinfo_item" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:src="@color/divider_line" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>